Fixed input boxes not aligning properly on super tiny screens; Slightly bumped up max page size to fit an iPad Pro.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -75,7 +75,7 @@ a:hover {
 }
 
 .page-container {
-  max-width: 1000px;
+  max-width: 1024px;
   margin: auto;
   padding-bottom: 2rem;
   background-color: #e1e5f2;
@@ -126,7 +126,7 @@ a:hover {
 
 .date-label,
 .time-label {
-  width: 2.5rem;
+  min-width: 2rem;
 }
 
 .date-time-row {
@@ -183,7 +183,7 @@ a:hover {
 
 .username-label,
 .password-label {
-  width: 6rem;
+  min-width: 4rem;
 }
 
 .password-label {
